@@ -1,32 +1,32 @@
 <div class="row">
   <div class="col-sm-3">#power off#</div>
   <div class="col-sm-3"></div>
-  <div class="col-sm-3">#tv#</div>
-  <div class="col-sm-3">#input#</div>
+  <div class="col-sm-2">#tv#</div>
+  <div class="col-sm-4">#input#</div>
 </div>
 <div class="row">
   <div class="col-sm-3">#menu#</div>
   <div class="col-sm-3">#teletext#</div>
-  <div class="col-sm-3">#subtitles#</div>
-  <div class="col-sm-3">#aspect#</div>
+  <div class="col-sm-2">#subtitles#</div>
+  <div class="col-sm-4">#aspect#</div>
 </div>
-<div class="row">
+<div class="row rows-with-margin">
   <div class="col-sm-3">#info#</div>
   <div class="col-sm-3"></div>
-  <div class="col-sm-3"></div>
-  <div class="col-sm-3">#cancel#</div>
+  <div class="col-sm-2"></div>
+  <div class="col-sm-4">#cancel#</div>
 </div>
 <div class="row">
   <div class="col-sm-4"></div>
   <div class="col-sm-4">#home#</div>
   <div class="col-sm-4"></div>
 </div>
-<div class="row">
+<div class="row rows-with-margin">
   <div class="col-sm-4">#apps#</div>
   <div class="col-sm-4">#up#</div>
   <div class="col-sm-4">#epg#</div>
 </div>
-<div class="row">
+<div class="row rows-with-margin">
   <div class="col-sm-12">#left##ok##right#</div>
 </div>
 <div class="row">
@@ -34,12 +34,12 @@
   <div class="col-sm-4">#down#</div>
   <div class="col-sm-4"></div>
 </div>
-<div class="row">
+<div class="row rows-with-margin">
   <div class="col-sm-4">#option#</div>
   <div class="col-sm-4"></div>
   <div class="col-sm-4">#back#</div>
 </div>
-<div class="row">
+<div class="row rows-with-margin">
   <div class="col-sm-2"></div>
   <div class="col-lg-2 col-md-2 col-sm-3 col-xs-2" style="padding:0px">
     <div class="short-div">#vol+#</div>
