@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row rows-with-margin">
   <div class="col-sm-3">#red#</div>
   <div class="col-sm-3">#green#</div>
   <div class="col-sm-3">#yellow#</div>
