@@ -2,18 +2,24 @@
   <span class="pull-left" style="margin-top: 3px;margin-left: 3px;" title="#alert_name#">
     <i class='#alert_icon#'></i>
   </span>
+  <style type="text/css">
+  .rows-with-margin {
+    margin-bottom: 5px;
+  }
+  </style>
+
   <center class="widget-name">
     <span class="reportModeVisible" style="font-size : 1.5em;display:none;">#name_display# <span style="font-size: 0.85em;">#object_name#</span></span>
     <a href="#eqLink#" class="reportModeHidden" style="font-size : 1.5em;#hideEqLogicName#">#name_display# <span style="font-size: 0.85em;">#object_name#</span></a>
   </center>
   <div class="verticalAlign">
-		<center style="padding: 5px;">
+    <center style="padding: 5px;">
       #group_basic#
       #group_colors#
       #group_numeric#
       #group_record#
       #group_multimedia#
       #group_others#
-		</center>
-	</div>
+    </center>
+  </div>
 </div>
