@@ -1,20 +1,24 @@
 <div class="row">
-  <div class="col-sm-4">#1#</div>
+  <div class="col-sm-1"></div>
+  <div class="col-sm-3">#1#</div>
   <div class="col-sm-4">#2#</div>
-  <div class="col-sm-4">#3#</div>
+  <div class="col-sm-3">#3#</div>
 </div>
 <div class="row">
-  <div class="col-sm-4">#4#</div>
+  <div class="col-sm-1"></div>
+  <div class="col-sm-3">#4#</div>
   <div class="col-sm-4">#5#</div>
-  <div class="col-sm-4">#6#</div>
+  <div class="col-sm-3">#6#</div>
 </div>
-<div class="row">
-  <div class="col-sm-4">#7#</div>
+<div class="row ">
+  <div class="col-sm-1"></div>
+  <div class="col-sm-3">#7#</div>
   <div class="col-sm-4">#8#</div>
-  <div class="col-sm-4">#9#</div>
+  <div class="col-sm-3">#9#</div>
 </div>
-<div class="row">
-  <div class="col-sm-4"></div>
+<div class="row rows-with-margin">
+  <div class="col-sm-1"></div>
+  <div class="col-sm-3"></div>
   <div class="col-sm-4">#0#</div>
-  <div class="col-sm-4">#last view#</div>
+  <div class="col-sm-3">#last view#</div>
 </div>
