@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-3">#3d#</div>
   <div class="col-sm-3">#guide#</div>
-  <div class="col-sm-3">#display mode#</div>
-  <div class="col-sm-3">#index#</div>
+  <div class="col-sm-2">#display mode#</div>
+  <div class="col-sm-4">#index#</div>
 </div>
