@@ -8,7 +8,7 @@
   <div class="col-sm-4">#pause#</div>
   <div class="col-sm-4">#next#</div>
 </div>
-<div class="row">
+<div class="row rows-with-margin">
   <div class="col-sm-4"></div>
   <div class="col-sm-4">#stop#</div>
   <div class="col-sm-4">#record#</div>
